Will compile now, for real

--- a/Correlates_of_Walking_to_School.Rmd
+++ b/Correlates_of_Walking_to_School.Rmd
@@ -44,7 +44,7 @@ options("show.signif.stars"=F)
 
 ## set global chunk options
 opts_chunk$set(echo=FALSE,
-               cache=FALSE,
+               cache=TRUE,
                dpi=96,
                fig.height=5,
                fig.width=7,
@@ -124,7 +124,7 @@ rm(dir, file )
 
 
 ```{r label=data-setup, results='hide', cache=TRUE}
-source( "data-setup-W2S.R" )
+source( "data-setup-W2S.R")
 ```
 
 # Introduction
@@ -159,7 +159,7 @@ observations plotted are those respondents who live less than
 `r I(format(plot_cutoff, big.mark=","))`m from school to make the plot more interpretable. The blue 
 line is a Generalised Additive Model smoother.  
 
-```{r walkstats, results='asis', cache=FALSE}
+```{r walkstats, results='asis'}
 walk_min <- 469 
 walk_50  <- 3100
 walk_max <- 5800 
@@ -189,7 +189,7 @@ The table below shows the number of missing values on variables to be included
 in the multivariate  analyses, which reduce the available sample size.
 
 <center>
-```{r mva, dependson="data-setup", cache=FALSE}
+```{r mva, dependson="data-setup"}
 # 2 obs  (9078, 9038) had missing aGender but non-missing gender; and missing 
 # age_cat but non-missing school year, DOB_day, DOB year ats. I entered 12.5 
 # for Age_Cat
@@ -197,7 +197,7 @@ in the multivariate  analyses, which reduce the available sample size.
 # Maybe they didn't finish the questionnaire?
 # 11 (9165, 4002, 1034, 10152, 9104, 3027, 9010, 8141, 8175, 3087, 5108) have
 # missing value on W2S section
-mva( dat.ats, thr = 4)
+mva( dat.ats, thr= 4 )
 ```
 </center>
 
@@ -238,13 +238,13 @@ Socio-demographic characteristics of students who walked versus did not walk to
 school are presented in Tables 2, 3 and 4.
 
 <center>
-```{r label="descriptives-demos", cache=FALSE}
+```{r label="descriptives-demos", dependson="data-setup" }
 require( Gmisc )
-n.w  <- table(dat.ats$ATS_f)[2]
-n.dw <- table(dat.ats$ATS_f)[1]
-res  <- data_setup( dat.ats,  "ATS_f", c("Age_at_Survey", "gender", "eth3", 
-                                         "BMI_2cat", "cars3", "NZDepCat3", 
-                                         "tsdecision","Dist2School"))
+n.w  <- table(dat.ats$W2S)[2]
+n.dw <- table(dat.ats$W2S)[1]
+res  <- data_setup( dat.ats,  "W2S", c("Age_at_Survey", "Sex", "eth3", 
+                                         "BMI_4cat", "cars3", "NZDepCat3", 
+                                         "tsdecision", "Dist"))
 (tab1 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
   n.rgroup = res$ngroup,
@@ -263,9 +263,9 @@ The tables below are not intended for inclusion in manuscripts, they are just
 here for reference in case we decide to change anything else.
 
 <center>
-```{r label="descriptives-cat", cache=FALSE}
+```{r label="descriptives-cat"}
 require( Gmisc ) 
-res <- data_setup( dat.ats, "ATS_f", c("school", "BMI_f", "BMI_2cat","HMcars", "ScrGuide",
+res <- data_setup( dat.ats, "W2S", c("School", "BMI_4cat", "HMcars", "ScrGuide",
                                        "whodecides", "schiclose"))
 (tab1 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
@@ -283,9 +283,9 @@ rm( tab1 )
 &nbsp;
 
 <center>
-```{r descriptives-cont, cache=FALSE}
+```{r descriptives-cont}
 require( Gmisc )
-res <- data_setup( dat.ats , "ATS_f", names(dat.ats)[c(16, 13:14, 17:50)])
+res <- data_setup( dat.ats , "W2S", names(dat.ats)[c(16, 13:14, 17:50)])
 (tab2 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
   n.rgroup = res$ngroup,
@@ -369,7 +369,7 @@ their VIFs are well below 10. Also these variables have little explanatory power
 conceptually. Accordingly they were removed at the earliest stage of model 
 simplification.
 
-```{r ATS-m1, dependson=c("read-data"), results='hide', cache=TRUE}
+```{r ATS-m1, dependson=c("read-data"), results='hide'}
 options( contrasts=c("contr.treatment", "contr.treatment"))
 dat.m1   <- dat.ats[ complete.cases(dat.ats), ]
 m1.ddist <- datadist(dat.m1)
@@ -389,7 +389,7 @@ m1.gof <- LR.summary( m1, html = T, anova=F )
 ```
 
 <center>
-```{r m1_gof, cache=FALSE}
+```{r m1_gof}
 htmlTable(m1.gof$sf, 
           rnames=F, 
           align="r", 
@@ -411,7 +411,7 @@ level are shown below, in model 2. Although the goal was to reduce the set of
 correlates to only those significant at the 5% level, meeting that criteria 
 resulted in a set which was also significant at the 1% level.
 
-```{r ATS-m2, dependson=c("data-setup", "ATS-m1"), results='asis', cache=TRUE}
+```{r ATS-m2, dependson=c("data-setup", "ATS-m1"), results='asis'}
 attach(dat.ats)
 dat.m2 <- dat.ats[ complete.cases(W2S, Dist, 
                                   BMI_4cat, 
@@ -446,7 +446,7 @@ htmlTable(m2.gof$sf,
 Table `r I(options("table_counter"))` summarises the goodness of fit of Model 2.
 
 <center>
-```{r m_final_anova, results='asis', cache=FALSE}
+```{r m_final_anova, results='asis'}
 aov2html( m2 )
 ```
 </center>
@@ -459,7 +459,7 @@ strategy to avoid false positives and non-replicable scientific research
 [@ioannidis05].
 
 
-```{r ATS-final, dependson=c("ATS-m2", "data-setup"), results='asis', cache=TRUE}
+```{r ATS-final, dependson=c("ATS-m2", "data-setup"), results='asis'}
 m_final <- m2
 m_final_gof <- LR.summary( m_final, print=FALSE )
 #htmlTable(round(anova(m_final), 3))
@@ -473,7 +473,7 @@ inspected the calibration results with *n*=200, giving the same substantive
 conclusion.)
 
 <center>
-```{r label=ATS-final-validate, dependson="ATS-final",results='asis', cache=F} 
+```{r label=ATS-final-validate, dependson="ATS-final",results='asis'} 
 s <- validate( m_final, B=validate_n )
 colnames(s) <- c("Model", "Training", "Test", "Optimism", "Corrected", "n")
 rownames(s)[1] <- "R<sub>xy</sub>"
@@ -492,7 +492,7 @@ over-fitting, and are more likely to be generalisable to new samples from the
 same population.
 
 <center>
-```{r m2-results-table, cache=FALSE, results='asis', dependson="ATS-final"}
+```{r m2-results-table, results='asis', dependson="ATS-final"}
 #LR.summary(m_final, table=T, print=F)
 htmlTable( OR(m2, Dist=c(4000,5000)), 
           label="OR-M2", 
