--- a/Correlates_of_Walking_to_School.Rmd
+++ b/Correlates_of_Walking_to_School.Rmd
@@ -5,11 +5,14 @@ output:
   html_document:
     toc: true
     number_sections: true
+    theme: yeti
+    css: style.css
   Grmd::docx_document:
     fig_caption: TRUE
     force_captions: TRUE
     toc: TRUE
     toc_depth: 5
+    css: style.css 
   pdf_document:
     toc: true
     latex_engine: xelatex
@@ -44,11 +47,7 @@ options("show.signif.stars"=F)
 
 ## set global chunk options
 opts_chunk$set(echo=FALSE,
-<<<<<<< HEAD
-               cache=FALSE,
-=======
                cache=TRUE,
->>>>>>> master
                dpi=96,
                fig.height=5,
                fig.width=7,
@@ -128,11 +127,7 @@ rm(dir, file )
 
 
 ```{r label=data-setup, results='hide', cache=TRUE}
-<<<<<<< HEAD
-source( "data-setup-W2S.R" )
-=======
 source( "data-setup-W2S.R")
->>>>>>> master
 ```
 
 # Introduction
@@ -167,11 +162,7 @@ observations plotted are those respondents who live less than
 `r I(format(plot_cutoff, big.mark=","))`m from school to make the plot more interpretable. The blue 
 line is a Generalised Additive Model smoother.  
 
-<<<<<<< HEAD
-```{r walkstats, results='asis', cache=FALSE}
-=======
 ```{r walkstats, results='asis'}
->>>>>>> master
 walk_min <- 469 
 walk_50  <- 3100
 walk_max <- 5800 
@@ -201,11 +192,7 @@ The table below shows the number of missing values on variables to be included
 in the multivariate  analyses, which reduce the available sample size.
 
 <center>
-<<<<<<< HEAD
-```{r mva, dependson="data-setup", cache=FALSE}
-=======
 ```{r mva, dependson="data-setup"}
->>>>>>> master
 # 2 obs  (9078, 9038) had missing aGender but non-missing gender; and missing 
 # age_cat but non-missing school year, DOB_day, DOB year ats. I entered 12.5 
 # for Age_Cat
@@ -213,11 +200,7 @@ in the multivariate  analyses, which reduce the available sample size.
 # Maybe they didn't finish the questionnaire?
 # 11 (9165, 4002, 1034, 10152, 9104, 3027, 9010, 8141, 8175, 3087, 5108) have
 # missing value on W2S section
-<<<<<<< HEAD
-mva( dat.ats, thr = 4)
-=======
 mva( dat.ats, thr= 4 )
->>>>>>> master
 ```
 </center>
 
@@ -258,15 +241,6 @@ Socio-demographic characteristics of students who walked versus did not walk to
 school are presented in Tables 2, 3 and 4.
 
 <center>
-<<<<<<< HEAD
-```{r label="descriptives-demos", cache=FALSE}
-require( Gmisc )
-n.w  <- table(dat.ats$ATS_f)[2]
-n.dw <- table(dat.ats$ATS_f)[1]
-res  <- data_setup( dat.ats,  "ATS_f", c("Age_at_Survey", "gender", "eth3", 
-                                         "BMI_2cat", "cars3", "NZDepCat3", 
-                                         "tsdecision","Dist2School"))
-=======
 ```{r label="descriptives-demos", dependson="data-setup" }
 require( Gmisc )
 n.w  <- table(dat.ats$W2S)[2]
@@ -274,7 +248,6 @@ n.dw <- table(dat.ats$W2S)[1]
 res  <- data_setup( dat.ats,  "W2S", c("Age_at_Survey", "Sex", "eth3", 
                                          "BMI_4cat", "cars3", "NZDepCat3", 
                                          "tsdecision", "Dist"))
->>>>>>> master
 (tab1 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
   n.rgroup = res$ngroup,
@@ -293,15 +266,9 @@ The tables below are not intended for inclusion in manuscripts, they are just
 here for reference in case we decide to change anything else.
 
 <center>
-<<<<<<< HEAD
-```{r label="descriptives-cat", cache=FALSE}
-require( Gmisc ) 
-res <- data_setup( dat.ats, "ATS_f", c("school", "BMI_f", "BMI_2cat","HMcars", "ScrGuide",
-=======
 ```{r label="descriptives-cat"}
 require( Gmisc ) 
 res <- data_setup( dat.ats, "W2S", c("School", "BMI_4cat", "HMcars", "ScrGuide",
->>>>>>> master
                                        "whodecides", "schiclose"))
 (tab1 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
@@ -319,15 +286,9 @@ rm( tab1 )
 &nbsp;
 
 <center>
-<<<<<<< HEAD
-```{r descriptives-cont, cache=FALSE}
-require( Gmisc )
-res <- data_setup( dat.ats , "ATS_f", names(dat.ats)[c(16, 13:14, 17:50)])
-=======
 ```{r descriptives-cont}
 require( Gmisc )
 res <- data_setup( dat.ats , "W2S", names(dat.ats)[c(16, 13:14, 17:50)])
->>>>>>> master
 (tab2 <- htmlTable(x = res$tab,
   rgroup   = res$rgroup,
   n.rgroup = res$ngroup,
@@ -354,8 +315,8 @@ the same problems were encountered using SAS.  Perhaps SPSS can do what we need,
 but a day of research and trial-and-error could not discover that.
  
 So, given the tight deadline (4 days) and the fact that I already wasted one day
-findout out that SPSS couldn't do the job, I elected to use **R**.  The process
-was this:
+finding out out that SPSS couldn't do the job, I elected to use **R**.  The
+process was this:
 
 1. All observations in the file with a value of the variable **Include** equal 
    to 1 were included.  No restrictions based on distance were used.
@@ -375,16 +336,6 @@ was this:
    remained significant at the 5% level, and the 1% level. Given the relatively
    large sample size, large number of IVs and large number of hypothesis tests,
    I strongly recommend using the 1% level.
-1. However, this model is **trivial**. It basically says what every social 
-   psychologist and consumer behaviourist knows: the best predictor of behaviour
-   is past behaviour and future intentions.  In this particular case, the only
-   additional explanatory variable is also trivial (distance).  All this tells
-   us precisely *nothing* about how behaviour could be modified for beneficial
-   outcomes.
-   
-
-
-   
 
 Notes:
 
@@ -397,131 +348,79 @@ calculated using school as a cluster variable.
 than 0.9 are labelled "outstanding", and those with ROC areas between 0.8 and 
 0.9 are labelled "excellent".
 
-## Model 1
-Following best practice (not *common* practice), as explained by 
-@harrell01 [pp. 56--60], all significant univariate correlates from Table 1 were 
-included in the initial model. This model was reduced by removing the correlate 
-with the largest *p*-value one at a time and re-inspecting the fit carefully. 
+## Model 0 
+Here are the results of including all the significant "univariate" correlates,
+except the Tg* variables.
 
-This was not a purely automatic or data-driven process. At each stage, the 
-conceptual meaning of the candidate variable for removal was considered.  During 
-this process, it became apparent that two of the correlates, **time** and 
-**intention** are highly correlated with distance and with each other, even though 
-their VIFs are well below 10. Also these variables have little explanatory power 
-conceptually. Accordingly they were removed at the earliest stage of model 
-simplification.
-
-<<<<<<< HEAD
-```{r ATS-m1, dependson=c("read-data"), results='hide', cache=TRUE}
-=======
-```{r ATS-m1, dependson=c("read-data"), results='hide'}
->>>>>>> master
-options( contrasts=c("contr.treatment", "contr.treatment"))
-dat.m1   <- dat.ats[ complete.cases(dat.ats), ]
-m1.ddist <- datadist(dat.m1)
-options(datadist="m1.ddist")
-m1 <- robcov(lrm(W2S ~ rcs( Dist, knots=3)
-          + BMI_4cat + n_cars + NZDepCat3 + school_decile_n 
-          + whodecides + control + schiclose 
-          + pleasant + boring + useful + safe + exercise 
-          + onway + stuff + sched + planning + sweaty + unsafe + tired 
-          + desire + confd 
-          + adults + parents_walk + parents_safe 
-          + parents_say + friends_say + school_says + cool + friends_dont 
-          + weather + hills + regwalk 
-          + NEStConnect + NGEsthetics, 
-          x=T, y=T, data=dat.m1 ), dat.m1$School)
-m1.gof <- LR.summary( m1, html = T, anova=F )
+```{r model.0, dependson="data-setup"}
+dat.m <- dat[ complete.cases(dat$Include), ]
+m.ddist <- datadist(dat.m)
+options(datadist='m.ddist')
+m0 <- robcov( lrm(ATS_f ~ Dist2School + gender + Age_at_Survey + as.numeric(HMcars) + as.numeric(WSpsh) + as.numeric(WSpunsafe) + as.numeric(WSpwalk) + as.numeric(WSAint) + as.numeric(WSAnice) + as.numeric(WSAstim) + as.numeric(WSAnice) + as.numeric(WSAgood) + as.numeric(WSAuseful) + as.numeric(WSAsafe) + as.numeric(WCSone) + as.numeric(WSchat) + as.numeric(WSfsh) + as.numeric(WSbfri) + as.numeric(WSf5ws) + as.numeric(WSbwant) + as.numeric(WStired) + as.numeric(WSno) + as.numeric(WSbstuff) + as.numeric(WSbsweat) + as.numeric(WSbplan) + as.numeric(WSbsched) + as.numeric(Dlikedriven) + as.numeric(F3_landuseaccess) + as.numeric(WSbdist) + as.numeric(WStime) + as.numeric(WSbsafe) + as.numeric(WSbfootp) + as.numeric(WCShills) + as.numeric(WCSrbor) + as.numeric(TSlike) + as.numeric(WScontrol) + as.numeric(WSintend) + as.numeric(WSwant) + as.numeric(WSconf) + as.numeric(WS2wks) + as.numeric(Icardrive) + as.numeric(Icarown) + as.numeric(hsiblings) + as.numeric(raincoat) + as.numeric(Datuse), x=T, y=T, data=dat.m ), cluster=dat.m$school)
 ```
 
+```{r m0-show, dependson="data-setup"}
+#aov2html(m0)
+m0
+```
+
+## Model 1 (Significant at 5%)
+Following best practice (not *common* practice), as explained by 
+@harrell01 [pp. 56--60], all significant univariate correlates from  were 
+included in the initial model. This model was reduced by removing the correlate 
+with the largest *p*-value one at a time and re-inspecting the fit carefully. 
+This resulted in the model shown below.
+
 <center>
-<<<<<<< HEAD
-```{r m1_gof, cache=FALSE}
-=======
-```{r m1_gof}
->>>>>>> master
-htmlTable(m1.gof$sf, 
+```{r ATS-m1, dependson=c("read-data"), results='asis'}
+m1.dat <- dat.m[ complete.cases(dat.m$ATS_f, dat.m$Dist2School, dat.m$gender, dat.m$Age_at_Survey, dat.m$WSAstim, dat.m$WSchat, dat.m$WSno, dat.m$WCSrbor, dat.m$WScontrol, dat.m$WSintend, dat.m$WS2wks, dat.m$Datuse),]
+m1.ddist <- datadist( m1.dat )
+options( datadist = "m1.ddist", contrasts=c("contr.treatment", "contr.treatment") )
+
+m1 <- robcov(lrm(ATS_f ~ rcs(Dist2School, 3) + gender + Age_at_Survey + as.numeric(WSAstim) + as.numeric(WSchat) + as.numeric(WSno) + as.numeric(WCSrbor) + as.numeric(WScontrol) + as.numeric(WSintend) + as.numeric(WS2wks) + as.numeric(Datuse), x=T, y=T, data=m1.dat ), cluster=m1.dat$school)
+m1.gof <- LR.summary(m1, print=FALSE)
+htmlTable( m1.gof$sf, 
           rnames=F, 
           align="r", 
           header=c("Index", "<span style='padding:5mm'/>", "Statistic", "<span style='padding:5mm'/>"), 
-          caption="Inital model goodness of fit and summary information")
-```
-</center>
-
-
-<center>
-```{r m1_anova, results='asis'}
-#aov2html( m1 )
+          caption="Model 1 goodness of fit and summary information")
+aov2html( m1 )
 ```
 </center>
   
-## Model 2
-The variables that survived this process and remained significant at the 5% 
-level are shown below, in model 2. Although the goal was to reduce the set of 
-correlates to only those significant at the 5% level, meeting that criteria 
-resulted in a set which was also significant at the 1% level.
-
-<<<<<<< HEAD
-```{r ATS-m2, dependson=c("data-setup", "ATS-m1"), results='asis', cache=TRUE}
-=======
-```{r ATS-m2, dependson=c("data-setup", "ATS-m1"), results='asis'}
->>>>>>> master
-attach(dat.ats)
-dat.m2 <- dat.ats[ complete.cases(W2S, Dist, 
-                                  BMI_4cat, 
-                                  onway, sched, planning, 
-                                  confd, parents_say, cool, regwalk), 
-                   c("ID", "W2S", "Dist",
-                     "BMI_4cat",
-                     "onway", "sched", "planning",
-                     "confd", "parents_say", "cool", "regwalk", 
-                     "School") ]
-detach( dat.ats )
-sc <- dat.m2$School
-m2.ddist <- datadist( dat.m2 )
-options( datadist = "m2.ddist", contrasts=c("contr.treatment", "contr.treatment") )
-m2 <- robcov(lrm( W2S ~ rcs(Dist, 3) + BMI_4cat
-          + onway + sched + planning 
-          + parents_say + cool + regwalk, 
-          x=T, y=T, data=dat.m2 ), cluster=sc )
-m2.gof <- LR.summary( m2, print=F )
-```
+## Model 2 (Significant at the 1% level)
+The 5% level leaves to much room  for Type I error due to sample size and alpha 
+inflation, so the 1% level was used to avoid these problems.  Regardless of 
+*common practice* this is a wise  strategy to avoid false positives and 
+non-replicable scientific research [@ioannidis05].
 
 <center>
-```{r m_final_gof}
-htmlTable(m2.gof$sf, 
+```{r ATS-m2, dependson=c("data-setup", "ATS-m1"), results='asis'}
+dat.m$WSno     <- as.numeric(dat.m$WSno)
+dat.m$WCSrbor  <- as.numeric(dat.m$WCSrbor)
+dat.m$WSintend <- as.numeric(dat.m$WSintend)
+dat.m$WS2wks   <- as.numeric(dat.m$WS2wks)
+
+m2.dat <- dat.m[ complete.cases(dat.m$ATS_f, dat.m$school,  dat.m$Dist2School, dat.m$gender, dat.m$Age_at_Survey, dat.m$WSno, dat.m$WCSrbor, dat.m$WSintend, dat.m$WS2wks), c("ATS_f", "school", "Dist2School", "gender", "Age_at_Survey", "WSno", "WCSrbor", "WSintend", "WS2wks")]
+m2.ddist <- datadist( m2.dat )
+options( datadist = "m2.ddist", contrasts=c("contr.treatment", "contr.treatment") )
+
+m2 <- robcov(lrm(ATS_f ~ rcs(Dist2School, 3) + gender + Age_at_Survey + WSno + WCSrbor + WSintend + WS2wks, x=T, y=T, data=m2.dat ), cluster=m2.dat$school)
+
+m2.gof <- LR.summary( m2, print=FALSE )
+htmlTable( m2.gof$sf, 
           rnames=F, 
           align="r", 
           header=c("Index", "<span style='padding:5mm'/>", "Statistic", "<span style='padding:5mm'/>"), 
-          caption="Goodness of fit and summary information")
-```
-</center>
-
-Table `r I(options("table_counter"))` summarises the goodness of fit of Model 2.
-
-<center>
-<<<<<<< HEAD
-```{r m_final_anova, results='asis', cache=FALSE}
-=======
-```{r m_final_anova, results='asis'}
->>>>>>> master
+          caption="Model 2 goodness of fit and summary information")
 aov2html( m2 )
 ```
 </center>
 
-Table `r I(options("table_counter"))`  shows Wald tests of the covariates. All 
-correlates are significant at the 1% level. The 5% level leaves to much room 
-for Type I error due to sample size and alpha inflation, so the 1% level was 
-used to avoid these problems.  Regardless of *common practice* this is a wise 
-strategy to avoid false positives and non-replicable scientific research 
-[@ioannidis05].
+Table `r I(options("table_counter"))`  shows Wald tests of the covariates. 
 
 
-<<<<<<< HEAD
-```{r ATS-final, dependson=c("ATS-m2", "data-setup"), results='asis', cache=TRUE}
-=======
 ```{r ATS-final, dependson=c("ATS-m2", "data-setup"), results='asis'}
->>>>>>> master
 m_final <- m2
 m_final_gof <- LR.summary( m_final, print=FALSE )
 #htmlTable(round(anova(m_final), 3))
@@ -535,12 +434,9 @@ inspected the calibration results with *n*=200, giving the same substantive
 conclusion.)
 
 <center>
-<<<<<<< HEAD
-```{r label=ATS-final-validate, dependson="ATS-final",results='asis', cache=F} 
-=======
-```{r label=ATS-final-validate, dependson="ATS-final",results='asis'} 
->>>>>>> master
-s <- validate( m_final, B=validate_n )
+```{r ATS-final-validate, dependson="ATS-final", results='asis'} 
+validate_n <- 100
+s <- validate( m_final, B =validate_n )
 colnames(s) <- c("Model", "Training", "Test", "Optimism", "Corrected", "n")
 rownames(s)[1] <- "R<sub>xy</sub>"
 rownames(s)[2] <- "R<sup>2</sup>"
@@ -558,13 +454,10 @@ over-fitting, and are more likely to be generalisable to new samples from the
 same population.
 
 <center>
-<<<<<<< HEAD
-```{r m2-results-table, cache=FALSE, results='asis', dependson="ATS-final"}
-=======
 ```{r m2-results-table, results='asis', dependson="ATS-final"}
->>>>>>> master
 #LR.summary(m_final, table=T, print=F)
-htmlTable( OR(m2, Dist=c(4000,5000)), 
+options( datadist = "m2.ddist", contrasts=c("contr.treatment", "contr.treatment") )
+htmlTable( OR( m2, Dist=c(4000,5000)), 
           label="OR-M2", 
           caption="Odds ratios<sup>&dagger;</sup>",
           align="r",
@@ -576,8 +469,8 @@ Table `r I(options("table_counter"))` shows the odds ratios from Model 2 and
 Figure 2 below represents the odds ratios and their confidence intervals 
 graphically.
 
-```{r ATS-OR-plot, dependson="ATS-final",fig.width=7.5, fig.cap="Figure 2: Odds ratios"}
-plot(summary(m_final, Dist=c(4000,5000)))
+```{r ATS-OR-plot, dependson="ATS-final", fig.width=7.5, fig.cap="Figure 2: Odds ratios"}
+plot(summary(m_final, Dist=c(4000,5000)) )
 ```
 
 Figure 3 below shows how the log odds of W2S varies over the range of the 
@@ -585,101 +478,26 @@ correlates in the final model, with shaded areas indicating 95% confidence
 intervals.
 
 ```{r ATS-OR-logit-plot, dependson="ATS-final",fig.width=8.5, fig.cap="Figure 3: Effect of covariates on logit"}
-options(datadist="m1.ddist")
-res <- Predict(m_final)
+res <- Predict( m_final )
 #plot(res[res$.predictor != "Dist2School", ])
-plot(res)
+plot( res )
 m4.gof <- LR.summary(update(m_final, . ~ . - rcs(Dist, 3)), print=F )
 ```
 
-
-## Interpretation
+## Summary
 The final model has absolutely outstanding predictive and discriminant validity, 
 and all  effects can be interpreted *ceteris paribus*. It also has good face 
-validity. Apart from the obvious effect of distance
-(`r I(OR.inline(OR(m_final, Dist=c(4000,5000))["Dist",], 3))`), 
-logistical factors: 
+validity. 
 
-- school being on the way to somewhere else,(**onway**, OR `r I(OR.print(m_final, "onway", 2))`) most probably work, or the school of a sibling) and
+But it is somewhat trivial and non-informative from the point of view of 
+designing interventions to encourage walking to school. It basically tells us 
+what every social psychologist and consumer behaviourist knows: the best 
+predictor of behaviour is past behaviour and future intentions.  In this 
+particular case, the other explanatory variables are also somewhat trivial,
+being reflective of a stereotypical teenager who, when asked why they do not do
+something, will reply either "I can't be bothered" or "It's boring". So, sadly, 
+all this tells us very little about how behaviour could be modified for 
+beneficial outcomes.
 
-- the difficulty of fitting walking into the student's after-school schedule (**sched**, OR `r I(OR.print(m_final, "sched", 2))`)
-
-- planning for walking to school (**planning**, OR `r I(OR.print(m_final, "planning", 2))`)
-
-decrease the likelihood of walking to school. However social and lifestyle factors:
-
-- peer approval (**cool**, OR `r I(OR.print(m_final, "cool", 2))`), 
-
-- having parental support or encouragement to walk (**parents_say**, OR `r I(OR.print(m_final, "parents_say", 2))`)
-
-- being a walker for general mobility (**regwalk**, OR `r I(OR.print(m_final, "regwalk", 2))`), and
-
-increase the likelihood of W2S.  Note that walking for general mobility may be
-a lifestyle choice, or a function of lack of alternative mobility options. 
-However the correlation between **regwalk** and **n_cars** is only 
-`r I(with(dat.ats, myCor(n_cars, regwalk)))` 
-(*p* &lt; `r I(fmt_p(with(dat.ats, cor.test(n_cars, regwalk))$p.value))`), 
-which gives some evidence that regular walking may not be based largely or 
-solely on necessity.
-
-Lastly, BMI has an effect.  The point estimates for ORs of being overweight or 
-obese more than halve the odds of W2S. The normal vs. obese comparison is not 
-significant, but this is almost certainly due to the lower number of students in 
-this category inflating the standard error, as the graphical presentation of ORs
-shows.
-
-The final model suggests that parental factors of encouragement to walk to 
-school, and to walk for general mobility, will be the most influential factors in 
-promoting walking to school among New Zealand secondary school students. If this
-encouragement was genuine, then the barriers of convenience and after-school
-schedule would not apply: students could be dropped off somewhere other than the
-school gate in the morning, and picked up from the school in the afternoon.
-Then, at least half the time they would be walking.
-
-It is relevant to note that there were many other "healthy lifestyle" factors
-that were unrelated to walking to school. No variables in the nutrition or 
-physical activity sections of the questionnaire influence the likelihood of 
-walking, for example.
-
-As a final comment, one may think that because distance has such a large 
-influence on walking to school, that the additional variables in the final model 
-do not have much explanatory power in relative terms. However this is not true. 
-Removing distance to school from the final model still gives an ROC value of 
-`r I(m4.gof$stats$ROC)`%, which is still outstanding.
-
-# Summary
-All logistic regression modelling results are exceptionally good in terms of 
-discrimination, predictive ability and face validity. 
-
-But, if time permits, I would really like to re-run these  models excluding 
-distances where either everyone walks (about 500m) or no-one  walks (about 
-5000m).  That would reduce the sample size somewhat, but I feel it would also 
-increase both the substantive and statistical validity and robustness of 
-modelling results.
-
-# Abstract
-**Results**: Overall, 
-`r I(round(100*prop.table(table(dat.ats$ATS)),1)[1])`%
-of adolescents in the sample used motorized transport to school, 
-`r I(round(100*prop.table(table(dat.ats$ATS)),1)[2])`% 
-W2S, and 
-`r I(round(100*prop.table(table(dat.ats$ATS)),1)[3])`% 
-used both motorized and active transport to school. Univariate correlates of W2S 
-included perceptions of walking to school, benefits of exercise, socializing with 
-friends, perceived barriers (convenience of being driven, time constraints, 
-school bag weight, after-school schedule, planning, sweating, safety concerns, 
-being too tired, lack of interest/desire), perceived control, number of adults 
-and vehicles at home, encouragement (peers, parents, school), distance, 
-perceived neighbourhood environment (land-mix use access, street connectivity, 
-aesthetics, hills) and weather. In a multivariate model, 
-peer approval (OR [95% CI]: 
-(`r I(OR.print(m_final, "cool", 2)) `) and parental encouragement
-(`r I(OR.print(m_final, "parents_say", 2))`)
-were positively associated with W2S while incompatibility of walking with 
-after-school schedule
-(`r I( OR.print(m_final, "sched", 2))`)
-and convenience of being driven to school on the way to somewhere else
-(`r I(OR.print(m_final, "onway", 2) )`)
-were negative factors.
 
 # References
